--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#Signupbox{
+  width: 430px;
+  height: 600px;
+  border: 3px solid black;
+  /* background-color: whitesmoke; */
+  background-image: linear-gradient(to right, rgba(255,0,0,0), rgb(232, 127, 127));
+  margin-top: 20px;
+  margin-left: 440px;
+   box-shadow: 0px 0px 3px 3px grey;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+table{
+  margin-top: 10px;
+  width: 100px;
+  height: 30px;
+  border: 2px solid black;
+  margin-left: 70px;
+  background-color: gray;
+}
+td{
+  width: 50px;
+  color: white;
+  height: 70px;
+  /* border: 1px solid black; */
+}
+#tecnology{
+  margin-left: 20px;
+  width: 150px;
+}
+#submitBtn{
+  margin-left: 190px;
+  background-color: blue;
+  width: 70px;
+  height:30px;
+  color: white;
+  margin-top: 20px;
+}
+#signup{
+  margin-left: 160px;
+  font-style: initial;
+  font-size: 40px;
+}
+#Dashboard{
+  font-size: 60px;
+}
+@keyframes animation{
+  0%{
+      color: rgb(227, 17, 52);
+      text-align: center;
+  }
+  25%{
+      color: blue;
+      text-align: center;
+  }
+  50%{
+      color: rgb(0, 255, 85);
+      text-align: center;
+  }
+  75%{
+      color: rgb(216, 28, 163);
+      text-align: center;
+  }
+  100%{
+      color: rgb(216, 24, 88);
+      text-align: center;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1{
+color: red;
+animation-name: animation;
+animation-duration: 5s;
+animation-iteration-count: infinite;
+text-align: center;
+}
+#Btn{
+  margin-left: 500px;
+  margin-top:10px;
+  background-color: rgb(211, 38, 38);
+  width: 100px;
+  color: white;
+  height: 30px;
+}
+#Btn1{
+  margin-left: 100px;
+  background-color: rgb(219, 28, 50);
+  height: 30px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
